Fix layout issues

--- a/src/Header.css
+++ b/src/Header.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 .header {
-  border: 2px solid black;
+  border-style: solid;
   border-radius: 25px;
 }
 
