--- a/src/Pokemon.css
+++ b/src/Pokemon.css
@@ -3,6 +3,8 @@
   color: white;
   font-weight:bold;
   text-align: center;
+  align-items: center;
+
 
 }
 
@@ -12,28 +14,6 @@
   display: inline-block;
   font-size: 12px;
   font-weight:bold;
-}
-.arrow-right:after {
-  margin-top: -10px;
-  content: "";
-  display: inline-block !important;
-  width: 0;
-  height: 0;
-  border-left: 8px solid #000;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  vertical-align: middle;
-
-}
-
-.arrow-right:before {
-  margin-top: -10px;
-  width: 60%;
-  height: 2px;
-  background: #000;
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
 }
 
 span {
@@ -52,6 +32,7 @@ span {
 
 .poison {
   background-color: rgb(160, 64, 160);
+  text-transform: capitalize;
 }
 
 .water {
